pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: short-app
  labels:
    components: frontend
spec:
  containers:
    - name: short-app
      image: nginx:latest
      ports:
        - containerPort: 80
#      resources:
#        limits:
#          cpu: "100m"
#        requests:
#          cpu: "100m"
