service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-grafana
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    components: frontend
